Fixed overflow bug on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@ body {
   grid-template-rows: min-content auto;
   grid-template-columns: 25% auto;
   height: 100vh;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 header {
@@ -66,25 +66,26 @@ button {
   grid-column: 1 / span 2;
 }
 
-.articleEntry {
-  padding: 30px;
+/* .articleEntry {
+  height: 98.1%;
+  padding: 30px 0 0 30px;
   display: flex;
   justify-content: left;
   background-image: linear-gradient(#4EA8DE, #C1D3FE, #C8B6FF);
-}
+} */
 
 form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 300px;
-  color: #012a4a;
+  padding: 30px;
+  background-image: linear-gradient(#4EA8DE, #C1D3FE, #C8B6FF);
 }
 
 form input,
 form textarea {
   margin-bottom: 10px;
-  width: 400px;
+  width: 300px;
   border: 1px solid #012a4a;
   border-radius: 5px;
 }
@@ -99,8 +100,7 @@ article {
 }
 
 nav,
-article {
-  height: 100%;
+article, form {
   color: #012a4a;
 }
 
